fixed post-meta letter spacing

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -49,12 +49,12 @@
   width: auto;
   font-weight: 100;
   margin: 0;
-  color: rgba(255, 255, 255, 0.76); // this is page date and read minutes colors
+  color: #fff; // this is page date and read minutes colors
 }
 
 .post-meta {
   font-size: 0.8rem;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
 }
 
 .blog-title {
